--- a/index.html
+++ b/index.html
@@ -1,103 +1,155 @@
 <!DOCTYPE html>
-    <html>
-    <head>
-      <meta charset='utf-8'>
-      <meta name='viewport' content='width=device-width'>
-      <title>Privacy Policy</title>
-      <style> body { font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif; padding:1em; } </style>
-    </head>
-    <body>
-    <strong>Privacy Policy</strong> <p>
-                  BI built the BI app as
-                  a Free app. This SERVICE is provided by
-                  BI at no cost and is intended for use as
-                  is.
-                </p> <p>
-                  This page is used to inform visitors regarding our
-                  policies with the collection, use, and disclosure of Personal
-                  Information if anyone decided to use our Service.
-                </p> <p>
-                  If you choose to use our Service, then you agree to
-                  the collection and use of information in relation to this
-                  policy. The Personal Information that we collect is
-                  used for providing and improving the Service. We will not use or share your information with
-                  anyone except as described in this Privacy Policy.
-                </p> <p>
-                  The terms used in this Privacy Policy have the same meanings
-                  as in our Terms and Conditions, which is accessible at
-                  BI unless otherwise defined in this Privacy Policy.
-                </p> <p><strong>Information Collection and Use</strong></p> <p>
-                  For a better experience, while using our Service, we
-                  may require you to provide us with certain personally
-                  identifiable information. The information that
-                  we request will be retained by us and used as described in this privacy policy.
-                </p> <!----> <p><strong>Log Data</strong></p> <p>
-                  We want to inform you that whenever you
-                  use our Service, in a case of an error in the app
-                  we collect data and information (through third party
-                  products) on your phone called Log Data. This Log Data may
-                  include information such as your device Internet Protocol
-                  (“IP”) address, device name, operating system version, the
-                  configuration of the app when utilizing our Service,
-                  the time and date of your use of the Service, and other
-                  statistics.
-                </p> <p><strong>Cookies</strong></p> <p>
-                  Cookies are files with a small amount of data that are
-                  commonly used as anonymous unique identifiers. These are sent
-                  to your browser from the websites that you visit and are
-                  stored on your device's internal memory.
-                </p> <p>
-                  This Service does not use these “cookies” explicitly. However,
-                  the app may use third party code and libraries that use
-                  “cookies” to collect information and improve their services.
-                  You have the option to either accept or refuse these cookies
-                  and know when a cookie is being sent to your device. If you
-                  choose to refuse our cookies, you may not be able to use some
-                  portions of this Service.
-                </p> <p><strong>Service Providers</strong></p> <p>
-                  We may employ third-party companies and
-                  individuals due to the following reasons:
-                </p> <ul><li>To facilitate our Service;</li> <li>To provide the Service on our behalf;</li> <li>To perform Service-related services; or</li> <li>To assist us in analyzing how our Service is used.</li></ul> <p>
-                  We want to inform users of this Service
-                  that these third parties have access to your Personal
-                  Information. The reason is to perform the tasks assigned to
-                  them on our behalf. However, they are obligated not to
-                  disclose or use the information for any other purpose.
-                </p> <p><strong>Security</strong></p> <p>
-                  We value your trust in providing us your
-                  Personal Information, thus we are striving to use commercially
-                  acceptable means of protecting it. But remember that no method
-                  of transmission over the internet, or method of electronic
-                  storage is 100% secure and reliable, and we cannot
-                  guarantee its absolute security.
-                </p> <p><strong>Links to Other Sites</strong></p> <p>
-                  This Service may contain links to other sites. If you click on
-                  a third-party link, you will be directed to that site. Note
-                  that these external sites are not operated by us.
-                  Therefore, we strongly advise you to review the
-                  Privacy Policy of these websites. We have
-                  no control over and assume no responsibility for the content,
-                  privacy policies, or practices of any third-party sites or
-                  services.
-                </p> <p><strong>Children’s Privacy</strong></p> <p>
-                  These Services do not address anyone under the age of 13.
-                  We do not knowingly collect personally
-                  identifiable information from children under 13. In the case
-                  we discover that a child under 13 has provided
-                  us with personal information, we immediately
-                  delete this from our servers. If you are a parent or guardian
-                  and you are aware that your child has provided us with
-                  personal information, please contact us so that
-                  we will be able to do necessary actions.
-                </p> <p><strong>Changes to This Privacy Policy</strong></p> <p>
-                  We may update our Privacy Policy from
-                  time to time. Thus, you are advised to review this page
-                  periodically for any changes. We will
-                  notify you of any changes by posting the new Privacy Policy on
-                  this page.
-                </p> <p>This policy is effective as of 2020-12-23</p> <p><strong>Contact Us</strong></p> <p>
-                  If you have any questions or suggestions about our
-                  Privacy Policy, do not hesitate to contact us at bi@bi.com.
-             </p>
-    </html>
-      
+<html lang="en">
+<head>
+	<title>Coming Soon 4</title>
+	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
+<!--===============================================================================================-->	
+	<link rel="icon" type="image/png" href="images/icons/favicon.ico"/>
+<!--===============================================================================================-->
+	<link rel="stylesheet" type="text/css" href="vendor/bootstrap/css/bootstrap.min.css">
+<!--===============================================================================================-->
+	<link rel="stylesheet" type="text/css" href="fonts/font-awesome-4.7.0/css/font-awesome.min.css">
+<!--===============================================================================================-->
+	<link rel="stylesheet" type="text/css" href="fonts/iconic/css/material-design-iconic-font.min.css">
+<!--===============================================================================================-->
+	<link rel="stylesheet" type="text/css" href="vendor/animate/animate.css">
+<!--===============================================================================================-->
+	<link rel="stylesheet" type="text/css" href="vendor/select2/select2.min.css">
+<!--===============================================================================================-->
+	<link rel="stylesheet" type="text/css" href="css/util.css">
+	<link rel="stylesheet" type="text/css" href="css/main.css">
+<!--===============================================================================================-->
+</head>
+<body>
+	
+	
+	<div class="bg-g1 size1 flex-w flex-col-c-sb p-l-15 p-r-15 p-t-55 p-b-35 respon1">
+		<span></span>
+		<div class="flex-col-c p-t-50 p-b-50">
+			<h3 class="l1-txt1 txt-center p-b-10">
+				Coming Soon
+			</h3>
+
+			<p class="txt-center l1-txt2 p-b-60">
+				Our website is under construction
+			</p>
+
+			<div class="flex-w flex-c cd100 p-b-82">
+				<div class="flex-col-c-m size2 how-countdown">
+					<span class="l1-txt3 p-b-9 days">35</span>
+					<span class="s1-txt1">Days</span>
+				</div>
+
+				<div class="flex-col-c-m size2 how-countdown">
+					<span class="l1-txt3 p-b-9 hours">17</span>
+					<span class="s1-txt1">Hours</span>
+				</div>
+
+				<div class="flex-col-c-m size2 how-countdown">
+					<span class="l1-txt3 p-b-9 minutes">50</span>
+					<span class="s1-txt1">Minutes</span>
+				</div>
+
+				<div class="flex-col-c-m size2 how-countdown">
+					<span class="l1-txt3 p-b-9 seconds">39</span>
+					<span class="s1-txt1">Seconds</span>
+				</div>
+			</div>
+
+			<button class="flex-c-m s1-txt2 size3 how-btn"  data-toggle="modal" data-target="#subscribe">
+				Follow us for update now!
+			</button>
+		</div>
+
+		<span class="s1-txt3 txt-center">
+			@ 2017 Coming Soon Template. Designed by Colorlib
+		</span>
+		
+	</div>
+
+	<!-- Modal Login -->
+	<div class="modal fade" id="subscribe" tabindex="-1" role="dialog" aria-hidden="true">
+		<div class="modal-dialog" role="document" data-dismiss="modal">
+			<div class="modal-subscribe where1-parent bg0 bor2 size4 p-t-54 p-b-100 p-l-15 p-r-15">
+				<button class="btn-close-modal how-btn2 fs-26 where1 trans-04">
+					<i class="zmdi zmdi-close"></i>
+				</button>
+
+				<div class="wsize1 m-lr-auto">
+					<h3 class="m1-txt1 txt-center p-b-36">
+						<span class="bor1 p-b-6">Subscribe</span>
+					</h3>
+
+					<p class="m1-txt2 txt-center p-b-40">
+						Follow us for update now!
+					</p>
+
+					<form class="contact100-form validate-form">
+						<div class="wrap-input100 m-b-10 validate-input" data-validate = "Name is required">
+							<input class="s1-txt4 placeholder0 input100" type="text" name="name" placeholder="Name">
+							<span class="focus-input100"></span>
+						</div>
+
+						<div class="wrap-input100 m-b-20 validate-input" data-validate = "Email is required: ex@abc.xyz">
+							<input class="s1-txt4 placeholder0 input100" type="text" name="email" placeholder="Email">
+							<span class="focus-input100"></span>
+						</div>
+
+						<div class="w-full">
+							<button class="flex-c-m s1-txt2 size5 how-btn1 trans-04">
+								Get Updates
+							</button>
+						</div>
+					</form>
+
+					<p class="s1-txt5 txt-center wsize2 m-lr-auto p-t-20">
+						And don’t worry, we hate spam too! You can unsubcribe at anytime.
+					</p>
+				</div>
+			</div>
+
+		</div>
+	</div>
+
+	
+
+<!--===============================================================================================-->	
+	<script src="vendor/jquery/jquery-3.2.1.min.js"></script>
+<!--===============================================================================================-->
+	<script src="vendor/bootstrap/js/popper.js"></script>
+	<script src="vendor/bootstrap/js/bootstrap.min.js"></script>
+<!--===============================================================================================-->
+	<script src="vendor/select2/select2.min.js"></script>
+<!--===============================================================================================-->
+	<script src="vendor/countdowntime/moment.min.js"></script>
+	<script src="vendor/countdowntime/moment-timezone.min.js"></script>
+	<script src="vendor/countdowntime/moment-timezone-with-data.min.js"></script>
+	<script src="vendor/countdowntime/countdowntime.js"></script>
+	<script>
+		$('.cd100').countdown100({
+			// Set Endtime here
+			// Endtime must be > current time
+			endtimeYear: 0,
+			endtimeMonth: 0,
+			endtimeDate: 35,
+			endtimeHours: 18,
+			endtimeMinutes: 0,
+			endtimeSeconds: 0,
+			timeZone: "" 
+			// ex:  timeZone: "America/New_York", can be empty
+			// go to " http://momentjs.com/timezone/ " to get timezone
+		});
+	</script>
+<!--===============================================================================================-->
+	<script src="vendor/tilt/tilt.jquery.min.js"></script>
+	<script >
+		$('.js-tilt').tilt({
+			scale: 1.1
+		})
+	</script>
+<!--===============================================================================================-->
+	<script src="js/main.js"></script>
+
+</body>
+</html>
